--- a/lecture_date_9_2_22/templates/index.html
+++ b/lecture_date_9_2_22/templates/index.html
@@ -5,9 +5,8 @@
 <body>
 <h1> Signup form</h1>
 <form method="POST">
-	Name: <input type="text" name="name" /> </br>
-	Age : <input type="text" name="age" /> </br></br>
+	Number: <input type="text" name="number" /> </br>
 	<input type="submit"/>
-	</form>
+</form>
 </body>
 </html>
