--- a/lecture_date_9_2_22/templates/not_passed.html
+++ b/lecture_date_9_2_22/templates/not_passed.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title> Python INT course - Bad Age </title>
+<title> ERROR </title>
 </head>
 <body>
-<h1> You have not passed the age barrier!</h1>
+<h1>The number is not prime!</h1>
 </body>
 </html>
