--- a/lecture_date_9_2_22/templates/passed.html
+++ b/lecture_date_9_2_22/templates/passed.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<title> Python INT course - Good Age </title>
+<title> Success</title>
 </head>
 <body>
-<h1> You have passed the age barrier!</h1>
+<h1> This is a prime number!</h1>
 </body>
 </html>
